fix: dark mode by system preference. i dont know why, but this is working as my expected

--- a/assets/main.less
+++ b/assets/main.less
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 
 @import 'ant-design-vue/dist/antd.less';
-@import './dark.less';
 
-// @media (prefers-color-scheme: dark) {
-//   @import './dark.less';
-// }
-
-@font-family: 'Dosis', sans-serif;
+body {
+  font-family: 'Dosis', sans-serif;
+}
 
 #components-layout-demo-top .logo {
   width: 120px;
